fixed some spacing for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
     src: local('Baron Neue'), url('Baron Neue.woff') format('woff');
 }
 
+#root {
+    min-height: 100%;
+    height: 100%;
+}
+
 html {
     min-height:100%;
     position:relative;
