--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,7 +1,7 @@
 .project-container {
     margin: auto;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     text-align: center;
     position: relative;
